# Product_Research_LangGraph_v1

./: .env.example  .gitignore  15_Batch.csv  CLAUDE.md  Dockerfile  README.md  danielson_12.csv  langgraph.json  main.py  pyproject.toml  railway.json  requirements.txt
.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_checkpoint.2.pckl  .langgraph_checkpoint.3.pckl  .langgraph_ops.pckl
product_research/: __init__.py
product_research/api/: __init__.py  routes.py
product_research/batch/: __init__.py  processor.py
product_research/config/: __init__.py  settings.py
product_research/schemas/: __init__.py  models.py
product_research_graph/: __init__.py  agent.py  config.py  state.py  tracing.py  workflow.py
product_research_graph/nodes/: __init__.py  filter.py  finalize.py  image_urls_cleanup.py  initialize.py  validate.py
product_research_graph/nodes/search/: __init__.py  _base.py  all_fields_openai.py  barcode_google.py  barcode_openai.py  barcode_yahoo.py  dispatcher.py  sku_google.py  sku_openai.py  sku_yahoo.py  title_sku_google.py
product_research_graph/prompts/: __init__.py  templates.py
product_research_graph/tools/: __init__.py  mcp_tools.py
product_research_graph/utils/: __init__.py  parsing.py  url_helpers.py
scripts/: get_traces.py
tests/: 3_Batch.csv  hareline_10.csv
