[project]
name = "product-research-agent"
version = "2.0.0"
description = "Product image research agent using LangGraph"
requires-python = ">=3.11"
dependencies = [
    # Core dependencies
    "fastapi",
    "uvicorn",
    "pandas",
    "python-dotenv",
    "pydantic>=2.0.0",
    "langsmith",
    "openpyxl",
    # OpenAI Agents SDK (original implementation)
    "openai-agents",
    # LangGraph dependencies (new implementation)
    "langgraph>=0.2.0",
    "langchain-openai>=0.2.0",
    "langchain-anthropic>=0.3.0",
    "langchain-core>=0.3.0",
    "langchain-mcp-adapters>=0.1.0",
    "langgraph-cli[inmem]>=0.4.7",
    "debugpy>=1.8.17",
]

[project.scripts]
product-research = "main:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["product_research*", "product_research_graph*"]
